CB-22652 Get Logging Url do not throw exception in the end of the E2E test if path cannot be found
API E2E test project's `getLoggingUrl` throws `TestFailException` if the provider storage service `couldn't process the call`. So the final test result shows this exception instead of the real test failure. The method should throw WARNING in these cases instead of ERROR.